--- a/Post-Compo version/export_presets.cfg
+++ b/Post-Compo version/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Builds/g/Heckin Schmeckin SPECIAl WORKING REAL 100.exe"
+export_path="../Builds/POST-COMPO/Win-32/Heckin Schmeckin.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -15,7 +15,7 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-binary_format/64_bits=true
+binary_format/64_bits=false
 binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -50,7 +50,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Builds/Linux-32/Heckin Schmeckin.x86_64.x86.x86_64.x86"
+export_path="../Builds/POST-COMPO/Linux-32/Heckin Schmeckin.x86.x86_64.x86"
 script_export_mode=1
 script_encryption_key=""
 
@@ -75,7 +75,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Builds/HTML/index.html"
+export_path="../Builds/POST-COMPO/HTML/index.html"
 script_export_mode=1
 script_encryption_key=""
 
